Fix crash using 'activate_init' in popup menus

Reported in T71112